--- a/_includes/sidebar_nav.html
+++ b/_includes/sidebar_nav.html
@@ -3,12 +3,10 @@
     <h2>Menu</h2>
   </header>
   <ul>
-    <li><a href="/">Homepage</a></li>
-    <li><a href="#Partners">Partners</a></li>
-    <li><a href="/blog/">Blog</a></li>
-    <li><a href="#News">News</a></li>
-    <li><a href="/documentation/">Documentation</a></li>
-    <li><a href="#About">About</a></li>
+    <li><a href="http://101.apievangelist.com">API 101</a></li>
+    <li><a href="http://101.provide.apievangelist.com">API Provider 101</a></li>
+    <li><a href="http://101.consume.apievangelist.com">API Consumer 101</a></li>
+    <li><a href="http://history.apievangelist.com">History of APIs</a></li>
     <li><a href="http://apievangelist.com">API Evangelist</a></li>
   </ul>
 </nav>
