--- a/_includes/sidebar_partners.html
+++ b/_includes/sidebar_partners.html
@@ -1,13 +1,13 @@
 <section>
-  <header class="major">
-    <h2>API Evangelist Partners</h2>
-  </header>
   <div class="mini-posts">
+    <header>
+			<h2 style="text-align: center;"><i>API Evangelist Sponsors</i></h2>
+		</header>
     {% assign partners = site.data.partners.index | sort: 'view_sort' %}
     {% for partner in partners %}
       {% if partner.type == 'Sponsor' %}
-        <article>
-          <a href="{{ partner.url }}" class="image"><img src="{{ partner.image }}" alt="" width="50%" /></a>
+        <article style="display: inline;">
+          <a href="{{ partner.url }}" class="image"><img src="{{ partner.image }}" alt="" width="50%" style="padding: 15px; border: 1px solid #000;" /></a>
         </article>
       {% endif %}
     {% endfor %}
