--- a/_includes/sidebar_nav.html
+++ b/_includes/sidebar_nav.html
@@ -4,8 +4,8 @@
   </header>
   <ul>
     <li><a href="http://101.apievangelist.com">API 101</a></li>
-    <li><a href="http://101.provide.apievangelist.com">API Provider 101</a></li>
-    <li><a href="http://101.consume.apievangelist.com">API Consumer 101</a></li>
+    <li><a href="http://101-provide.apievangelist.com">API Provider 101</a></li>
+    <li><a href="http://101-consume.apievangelist.com">API Consumer 101</a></li>
     <li><a href="http://history.apievangelist.com">History of APIs</a></li>
     <li><a href="http://apievangelist.com">API Evangelist</a></li>
   </ul>
